// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render logged in state sidebar - migrated 1`] = `
<header>
  <Link
    href=""
    to="/"
  >
    <img
      src="cv-logo-one-color-white.svg"
    />
  </Link>
  <nav>
    <NavLink
      exact={true}
      to="/"
    >
      Home
    </NavLink>
    <NavLink
      exact={true}
      to="/how-to"
    >
      How-to
    </NavLink>
    <NavLink
      exact={true}
      key="add"
      to="/add"
    >
      Add
    </NavLink>
    <NavLink
      key="review"
      to="/review"
    >
      Review
    </NavLink>
    <NavLink
      key="rejected"
      to="/rejected"
    >
      Rejected Sentences
    </NavLink>
    <NavLink
      key="stats"
      to="/stats"
    >
      Statistics
    </NavLink>
    <NavLink
      exact={true}
      key="profile"
      to="/profile"
    >
      Profile
    </NavLink>
  </nav>
  <ProfileWidget />
  <section
    id="external-links"
  >
    <a
      href="https://discourse.mozilla.org/tags/c/voice/sentence-collection"
      rel="noopener noreferrer"
      target="_blank"
    >
      Discourse
    </a>
    <a
      href="https://github.com/Common-Voice/sentence-collector/issues"
      rel="noopener noreferrer"
      target="_blank"
    >
      Report Bugs (GitHub)
    </a>
    <a
      href="https://discourse.mozilla.org/t/sentence-collector-copyright-issues/52767"
      rel="noopener noreferrer"
      target="_blank"
    >
      Report copyright issues
    </a>
    <a
      href="https://commonvoice.mozilla.org/privacy"
      rel="noopener noreferrer"
      target="_blank"
    >
      Privacy
    </a>
    <a
      href="https://commonvoice.mozilla.org/terms"
      rel="noopener noreferrer"
      target="_blank"
    >
      Terms
    </a>
    <a
      href="https://www.mozilla.org/en-US/privacy/websites/#cookies"
      rel="noopener noreferrer"
      target="_blank"
    >
      Cookies
    </a>
  </section>
</header>
`;

exports[`should render logged in state sidebar 1`] = `
<header>
  <Link
    href=""
    to="/"
  >
    <img
      src="cv-logo-one-color-white.svg"
    />
  </Link>
  <nav>
    <NavLink
      exact={true}
      to="/"
    >
      Home
    </NavLink>
    <NavLink
      exact={true}
      to="/how-to"
    >
      How-to
    </NavLink>
    <NavLink
      exact={true}
      key="add"
      to="/add"
    >
      Add
    </NavLink>
    <NavLink
      key="review"
      to="/review"
    >
      Review
    </NavLink>
    <NavLink
      key="rejected"
      to="/rejected"
    >
      Rejected Sentences
    </NavLink>
    <NavLink
      key="stats"
      to="/stats"
    >
      Statistics
    </NavLink>
    <NavLink
      exact={true}
      key="profile"
      to="/profile"
    >
      Profile
    </NavLink>
    <NavLink
      exact={true}
      key="migrate"
      to="/migrate"
    >
      Migrate Account
    </NavLink>
  </nav>
  <ProfileWidget />
  <section
    id="external-links"
  >
    <a
      href="https://discourse.mozilla.org/tags/c/voice/sentence-collection"
      rel="noopener noreferrer"
      target="_blank"
    >
      Discourse
    </a>
    <a
      href="https://github.com/Common-Voice/sentence-collector/issues"
      rel="noopener noreferrer"
      target="_blank"
    >
      Report Bugs (GitHub)
    </a>
    <a
      href="https://discourse.mozilla.org/t/sentence-collector-copyright-issues/52767"
      rel="noopener noreferrer"
      target="_blank"
    >
      Report copyright issues
    </a>
    <a
      href="https://commonvoice.mozilla.org/privacy"
      rel="noopener noreferrer"
      target="_blank"
    >
      Privacy
    </a>
    <a
      href="https://commonvoice.mozilla.org/terms"
      rel="noopener noreferrer"
      target="_blank"
    >
      Terms
    </a>
    <a
      href="https://www.mozilla.org/en-US/privacy/websites/#cookies"
      rel="noopener noreferrer"
      target="_blank"
    >
      Cookies
    </a>
  </section>
</header>
`;

exports[`should render logged out state sidebar 1`] = `
<header>
  <Link
    href=""
    to="/"
  >
    <img
      src="cv-logo-one-color-white.svg"
    />
  </Link>
  <nav>
    <NavLink
      exact={true}
      to="/"
    >
      Home
    </NavLink>
    <NavLink
      exact={true}
      to="/how-to"
    >
      How-to
    </NavLink>
    <NavLink
      exact={true}
      key="add"
      to="/add"
    >
      Add
    </NavLink>
    <NavLink
      key="review"
      to="/review"
    >
      Review
    </NavLink>
    <NavLink
      key="rejected"
      to="/rejected"
    >
      Rejected Sentences
    </NavLink>
    <NavLink
      key="stats"
      to="/stats"
    >
      Statistics
    </NavLink>
    <a
      href="/sentence-collector/login"
    >
      Login
    </a>
  </nav>
  <ProfileWidget />
  <section
    id="external-links"
  >
    <a
      href="https://discourse.mozilla.org/tags/c/voice/sentence-collection"
      rel="noopener noreferrer"
      target="_blank"
    >
      Discourse
    </a>
    <a
      href="https://github.com/Common-Voice/sentence-collector/issues"
      rel="noopener noreferrer"
      target="_blank"
    >
      Report Bugs (GitHub)
    </a>
    <a
      href="https://discourse.mozilla.org/t/sentence-collector-copyright-issues/52767"
      rel="noopener noreferrer"
      target="_blank"
    >
      Report copyright issues
    </a>
    <a
      href="https://commonvoice.mozilla.org/privacy"
      rel="noopener noreferrer"
      target="_blank"
    >
      Privacy
    </a>
    <a
      href="https://commonvoice.mozilla.org/terms"
      rel="noopener noreferrer"
      target="_blank"
    >
      Terms
    </a>
    <a
      href="https://www.mozilla.org/en-US/privacy/websites/#cookies"
      rel="noopener noreferrer"
      target="_blank"
    >
      Cookies
    </a>
  </section>
</header>
`;
